@@ -2,6 +2,7 @@ set(TGUI_SRC
     Animation.cpp
     BoxLayout.cpp
     Clipboard.cpp
+    Clipping.cpp
     Color.cpp
     Container.cpp
     Font.cpp
