@@ -26,8 +26,7 @@
 #include <TGUI/Widgets/ToolTip.hpp>
 #include <TGUI/Gui.hpp>
 #include <TGUI/DefaultFont.hpp>
-
-#include <SFML/OpenGL.hpp>
+#include <TGUI/Clipping.hpp>
 
 #include <cassert>
 
@@ -139,6 +138,8 @@ namespace tgui
         }
         else // Set it anyway in case something changed that we didn't care to check
             m_view = view;
+
+        Clipping::setGuiView(m_view);
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -236,33 +237,11 @@ namespace tgui
     {
         assert(m_window != nullptr);
 
-        // Make sure the right opengl context is set when clipping
-        if (dynamic_cast<sf::RenderWindow*>(m_window))
-            dynamic_cast<sf::RenderWindow*>(m_window)->setActive(true);
-        else if (dynamic_cast<sf::RenderTexture*>(m_window))
-            dynamic_cast<sf::RenderTexture*>(m_window)->setActive(true);
-
         // Update the time
         if (m_container->m_focused)
             updateTime(m_clock.restart());
         else
             m_clock.restart();
-
-        // Check if clipping is enabled
-        GLboolean clippingEnabled = glIsEnabled(GL_SCISSOR_TEST);
-        GLint scissor[4];
-
-        if (clippingEnabled)
-        {
-            // Remember the old clipping area
-            glGetIntegerv(GL_SCISSOR_BOX, scissor);
-        }
-        else // Clipping was disabled
-        {
-            // Enable clipping
-            glEnable(GL_SCISSOR_TEST);
-            glScissor(0, 0, m_window->getSize().x, m_window->getSize().y);
-        }
 
         // Change the view
         sf::View oldView = m_window->getView();
@@ -273,12 +252,6 @@ namespace tgui
 
         // Restore the old view
         m_window->setView(oldView);
-
-        // Reset clipping to its original state
-        if (clippingEnabled)
-            glScissor(scissor[0], scissor[1], scissor[2], scissor[3]);
-        else
-            glDisable(GL_SCISSOR_TEST);
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
