@@ -25,8 +25,7 @@
 
 #include <TGUI/Texture.hpp>
 #include <TGUI/Global.hpp>
-
-#include <SFML/OpenGL.hpp>
+#include <TGUI/Clipping.hpp>
 
 #include <cassert>
 
@@ -541,43 +540,10 @@ namespace tgui
             }
             else
             {
-                const sf::View& view = target.getView();
+                Clipping clipping{target, states, sf::Vector2f{m_textureRect.left, m_textureRect.top}, sf::Vector2f{m_textureRect.width, m_textureRect.height}};
 
-                // Calculate the scale factor of the view
-                float scaleViewX = target.getSize().x / view.getSize().x;
-                float scaleViewY = target.getSize().y / view.getSize().y;
-
-                // Get the global position
-                sf::Vector2f topLeftPosition = states.transform.transformPoint(((m_textureRect.left - view.getCenter().x + (view.getSize().x / 2.f)) * view.getViewport().width) + (view.getSize().x * view.getViewport().left),
-                                                                               ((m_textureRect.top - view.getCenter().y + (view.getSize().y / 2.f)) * view.getViewport().height) + (view.getSize().y * view.getViewport().top));
-                sf::Vector2f bottomRightPosition = states.transform.transformPoint((m_textureRect.left + m_textureRect.width - view.getCenter().x + (view.getSize().x / 2.f)) * view.getViewport().width + (view.getSize().x * view.getViewport().left),
-                                                                                   (m_textureRect.top + m_textureRect.height - view.getCenter().y + (view.getSize().y / 2.f)) * view.getViewport().height + (view.getSize().y * view.getViewport().top));
-
-                // Get the old clipping area
-                GLint scissor[4];
-                glGetIntegerv(GL_SCISSOR_BOX, scissor);
-
-                // Calculate the clipping area
-                GLint scissorLeft = std::max(static_cast<GLint>(topLeftPosition.x * scaleViewX), scissor[0]);
-                GLint scissorTop = std::max(static_cast<GLint>(topLeftPosition.y * scaleViewY), static_cast<GLint>(target.getSize().y) - scissor[1] - scissor[3]);
-                GLint scissorRight = std::min(static_cast<GLint>(bottomRightPosition.x * scaleViewX), scissor[0] + scissor[2]);
-                GLint scissorBottom = std::min(static_cast<GLint>(bottomRightPosition.y * scaleViewY), static_cast<GLint>(target.getSize().y) - scissor[1]);
-
-                // If the object outside the window then don't draw anything
-                if (scissorRight < scissorLeft)
-                    scissorRight = scissorLeft;
-                else if (scissorBottom < scissorTop)
-                    scissorTop = scissorBottom;
-
-                // Set the clipping area
-                glScissor(scissorLeft, target.getSize().y - scissorBottom, scissorRight - scissorLeft, scissorBottom - scissorTop);
-
-                // Draw the texture
                 states.texture = &m_data->texture;
                 target.draw(m_vertices.data(), m_vertices.size(), sf::PrimitiveType::TrianglesStrip, states);
-
-                // Reset the old clipping area
-                glScissor(scissor[0], scissor[1], scissor[2], scissor[3]);
             }
         }
     }
